...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/rename_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rename"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/session_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
